# email_agent

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
data/: email_assist.db
src/agents/: __init__.py  base_agent.py  draft_writer_agent.py  input_parser_agent.py  intent_detection_agent.py  memory_agent.py  personalization_agent.py  response.py  review_validator_agent.py  routing_memory_agent.py  state.py  tone_stylist_agent.py
src/memory/: sqlite_memory_store.py
src/profiles/: __init__.py  seed_profile.py  sqlite_profile_store.py
src/templates/: __init__.py  engine.py  seed_templates.py  sqlite_template_store.py  store.py
src/templates/fixtures/: templates.py
src/ui/: app.py
src/utils/: logging.py  recipient.py  sessionid.py
src/workflow/: router.py  workflow.py
tests/: END_TO_END.md  manual_tests.md  test_draft_writer.py  test_input_parser.py  test_intent_detection.py  test_memory_agent.py  test_personalization.py  test_review_validator.py  test_template_engine.py  test_template_store_sqlite.py  test_tone_stylist.py
tests/utils/: mock_llm.py
